--- a/styles.css
+++ b/styles.css
@@ -235,3 +235,22 @@ main {
 .color {
   color: var(--clr-primary-5);
 }
+
+#description {
+  padding: 2rem;
+  line-height: 2rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 25px;
+  color: #07A7B7;
+  text-align: center;
+}
+
+.background {
+  min-height: calc(10vh);
+  display: grid;
+  place-items: center;
+  position: relative;
+  /* height: 10rem; */
+  background-color: white;
+}
+
